# locationsharing

./: .travis.yml  Cargo.toml  README.md
src/: bin.rs  error.rs  fetch.rs  lib.rs  location.rs  main.rs
src/testdata/: example.json
