[package]
name = "locationsharing"
version = "0.1.2"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

description = "A wrapper for the Google Location Sharing API"
readme = "README.md"
repository = "https://github.com/stillinbeta/locationsharing"
license = "Apache-2.0"
keywords = ["google", "location", "locationsharing", "maps", "geolocation"]
categories = ["api-bindings"]

[dependencies]
chrono = "0.4"
serde_json = "1.0"
reqwest = "0.9.12"

